# controls

./: .gitignore  API_Short.xlsx  README.md  control_from_file.py  controls.py  execute_matrix.py  execute_pid.py  execute_surrogate.py  labview.py  main.py  pid_mf_dc.py  pyproject.toml  read_data.py  test_thrust_stand.py
controls/: execute_pid.py  execute_surrogate.py  listen_for_controls.py  plot_oscillation_data.py
controls/jl/: Project.toml
controls/lib/: controls.py  labview.py  metrics.py  reverse_model.py  surrogate.py
lib/: controls.py  labview.py  pid.py  surrogate.py
src/: analyze_diffusion_log.py  analyze_surrogate.py  analyze_surrogate_1d.py  control_from_file.py  control_to_setpoint.py  execute_matrix.py  execute_pid.py  execute_surrogate.py  listen_for_controls.py  plot_oscillation_data.py  run_diffusion_control.py  test_controls.py  test_send_controls.py  test_surrogate.py  test_thrust_stand.py
src/jl/: Manifest.toml  run_forward.jl
src/lib/: controls.py  diffusion_control.py  forward_model.py  labview.py  reverse_model.py  surrogate.py  utils.py
