[project]
name = "controls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scipy>=1.17.1",
    "smt>=2.14.0",
    "tqdm>=4.68.1",
]
